# UnRustedWarfare

./: .gitignore  CMakeLists.txt  Makefile  RenderEngine.cpp  RenderEngine.h  build.bat  build.sh  deploy.bat  doc.html  doc.md  doc_ch.md  doc_gen.sh  main.cpp  mainwidget.cpp  mainwidget.h  resources.qrc  run.bat  run.sh  ui.qsst
.run/: untitled1.run.xml
M2A3/: M2布雷德利.ini  老大.ini
doc/: doc.md  大作业自评表 .xlsx
game/: Attachable.cpp  Attachable.h  Body.cpp  Body.h  Configs.cpp  Configs.h  Drawable.cpp  Drawable.h  Game.cpp  Game.h  GridsManager.cpp  MetaAttachable.cpp  MetaAttachable.h  MetaEffect.cpp  MetaEffect.h  MetaObject.cpp  MetaObject.h  MetaProjectiles.h  MetaTurret.cpp  MetaTurret.h  MetaUnit.h  Object.cpp  Object.h  PhysicsEngine.cpp  PhysicsEngine.h  Projectile.cpp  Projectile.h  Sensor.cpp  Sensor.h  SpaceEngine.cpp  SpaceEngine.h  Turret.cpp  Turret.h  Unit.cpp  Unit.h
include/: Attachable.h  Configs.h  Drawable.h  Game.h  GridsManager.h  MapConfig.h  MetaDrawable.h  MetaObject.h  MetaTurret.h  MetaUnit.h  Object.h  Projectile.h  RenderEngine.h  Resources.h  Structures.h  Tile.h  Unit.h  UnitConfigs.h  battle_widget.h  battlefieldwidget.h  welcome_widget.h
include/tmxlite/: Layer.hpp  LayerGroup.hpp  Map.hpp  ObjectGroup.hpp  ObjectTypes.hpp  Tileset.hpp
maps/: (4p)港口城镇-沙漏倒计.tmx  (V1)20p 原神-枫丹_by-Qiuye.tmx  3.tmx  City Under Siege [by Shadow Fox].tmx  EK_Palindrome.tmx  Froot Loop City.tmx  Unfair Advantage.tmx  [p10](10)岛屿战争.tmx  [p10](10)弹坑.tmx  [p2](2)泥沼by_MP97.tmx  [p3](3)佛雷特城市圈.tmx  [p4](4)安第斯山绿洲by_MP97.tmx  [p6](6)死路by_MP97.tmx  [p6](6)沙漠河流(6p) [by Mirkov].tmx  [p6](6)西顿的离合器.tmx  [p6](6)遥望大陆_by_MP97.tmx  units.tsx  units_map.xml  狗图（8p）.tmx  郊区测试点.tmx
resources/: mod-info.txt
resources/assets/kingGodzilla/: kingGodzillaDiving.ini  kingGodzillaMeltdown.ini
resources/maps/: (6p) 宝可梦 [by_stevePH].tmx  (Final)20p 原神-稻妻城_by-Qiuye.tmx  (Final)20p 原神-蒙德城2.0_by-Qiuye.tmx  (Final)30p 原神-璃月_by-Qiuye.tmx  1.tmx  2_special_pokemom.tmx  3.tmx  TASK_ONE.tmx  [P2](2)城中对决by_Shadow_Fox.tmx  [p2](2)堵塞之河_by_MP97.tmx  [p2](2)热带战争by_MP97.tmx  [p2](2)熔岩地域MP97.tmx  [p2](2)遗迹by_Webster1664.tmx  [p3](3)不公平优势1v2.tmx  [p4](4)炽热之湖by_MP97.tmx  [p4](4)秋日癫狂by_MP97.tmx  [p4](4)荒漠回声(4p) [by uber].tmx  [p4](4)边疆大桥by_MP97.tmx  [p6](6)企鹅乐园by_MP97.tmx  [p6](6)冰封山谷[by uber].tmx  [p8](6)沉沦谷by_MP97.tmx  landscape_10_死亡峡谷.tmx  landscape_1_countryside.tmx  landscape_2_CityCluster.tmx  landscape_2_佛雷特城市圈.tmx  landscape_3_AncientPath.tmx  landscape_3_文明古道.tmx  landscape_4_Lunar.tmx  landscape_4_月球矿坑.tmx  landscape_5_狗图.tmx  landscape_7_SmugglingHarbor.tmx  landscape_7_走私港湾.tmx  landscape_8_DeathValley.tmx  landscape_8_城中对决.tmx  landscape_9_末日危局.tmx  menu.tmx  misc.tsx  mission_1_origin.tmx  mission_1_origin.tmx.autosave  mission_3_死亡峡谷.tmx  (+6 more)
resources/maps/ridges/: Dirt Dirt - Ridge.tsx  Dirt ShalowWater - Ridge.tsx  Ice Ice - Flat.tsx  LongGrass Dirt - Flat.tsx  LongGrass Dirt - Ridge.tsx  LongGrass LongGrass - Hill.tsx  LongGrass LongGrass - Ridge.tsx  LongGrass ShallowWater - Flat.tsx  LongGrass ShallowWater - Ridge.tsx  LongGrass ShortGrass - Flat.tsx  Mountain LongGrass - Flat.tsx  Mountain Mountain - Hill.tsx  Mountain Mountain - Ridge.tsx  Mountain Sand - Flat.tsx  Mountain ShallowWater - Flat.tsx  Mountain ShallowWater - Ridge.tsx  Mountain Snow - Flat.tsx  Sand LandGrass - Flat.tsx  Sand Sand - Hill.tsx  Sand Sand - Ridge.tsx  Sand ShallowWater - Flat.tsx  Sand ShallowWater - Ridge.tsx  Snow Ice - Ridge.tsx  Snow Snow - Hill.tsx  Snow Snow - ridge.tsx  Stone Stone - Ridge.tsx  Water DeepWater - Flat.tsx
resources/maps/terrain/: Deep Water.tsx  Dirt.tsx  Dirt_Details.tsx  Ice.tsx  Lava.tsx  Long Grass.tsx  Mountain.tsx  Sand.tsx  Short Grass.tsx  Stone.tsx  Water.tsx
resources/unit_for_use/human/: 治安官进攻.ini  消防员3.ini  特警ar15.ini  特警m24.ini  特警m870.ini  特警mp5.ini  班用机枪.ini  美军侦察兵.ini  装甲兵.ini  警察M870.ini  警犬.ini  通用机枪卧倒.ini  队员.ini  队长.ini  陆军单兵机枪手攻击.ini  陆军反坦.ini  陆军工兵.ini
resources/unit_for_use/vehicle/: AS350fx.ini  CH47fx.ini  HH60fx.ini  JLTV（M2）.ini  小车.ini  斯特赖克.ini  警车.ini  (+5 more)
resources/units/: 老大.ini
resources/隔离区开发工具/: 工具.ini
src/: main.cpp
src/game/: Arm.cpp  Attachable.cpp  AudioManager.cpp  AudioManager.h  BoidSensor.cpp  BoidSensor.h  Configs.cpp  Controller.cpp  Controller.h  DirectPathFollowController.cpp  DirectPathFollowController.h  Drawable.cpp  Effect.cpp  Flock.cpp  Game.cpp  GridsManager.cpp  Logic.cpp  MapConfig.cpp  MeleeSensor.cpp  MeleeSensor.h  MetaArm.cpp  MetaAttachable.cpp  MetaDrawable.cpp  MetaEffect.cpp  MetaObject.cpp  MetaProjectiles.cpp  MetaTurret.cpp  MetaUnit.cpp  Object.cpp  Projectile.cpp  Sensor.cpp  SimpleEffect.cpp  SimpleEffect.h  Tile.cpp  Trigger.cpp  Trigger.h  Turret.cpp  Unit.cpp  UnitConfigs.cpp  WarfareFogManager.cpp  (+2 more)
src/include/: Arm.h  Attachable.h  AudioManager.h  BoidSensor.h  DirectPathFollowController.h  Drawable.h  Effect.h  Flock.h  FlowField.h  Game.h  GameConfig.h  GridsManager.h  Logic.h  MapConfig.h  MetaArm.h  MetaAttachable.h  MetaDrawable.h  MetaEffect.h  MetaProjectiles.h  MetaTurret.h  MetaUnit.h  Object.h  PathFind.h  Projectile.h  RenderEngine.h  Sensor.h  SimpleEffect.h  Tile.h  Trigger.h  Turret.h  Unit.h  UnitConfigs.h  WarfareFogManager.h  battlefieldwidget.h  utils.h  welcome_widget.h
src/tmxlite/: FreeFuncs.cpp  ImageLayer.cpp  LayerGroup.cpp  Makefile  Map.cpp  Object.cpp  ObjectGroup.cpp  ObjectTypes.cpp  Property.cpp  TileLayer.cpp  Tileset.cpp  cmake_install.cmake  pugixml.cpp
src/ui/: BattlefieldWidget.cpp  RenderEngine.cpp  battle_widget.cpp  battle_widget.ui  choose_widget.cpp  choose_widget.ui  dialog_widget.cpp  dialog_widget.ui  game_end_widget.cpp  game_end_widget.ui  help_slide_widget.cpp  help_slide_widget.ui  main_window.cpp  main_window.h  main_window.ui  settings_widget.cpp  settings_widget.h  settings_widget.ui  splash_widget.cpp  splash_widget.ui  suspend_menu_widget.cpp  suspend_menu_widget.ui  welcome_widget.cpp  welcome_widget.ui
src/utils/: pugixml.cpp
ui/: icons.txt  ui.qss
utils/: devide.py  fix_person_bug.py  load_res.py  png_clean.py  png_convert.py  png_cut.py
(+852 files in other folders)
